Resolves: tdf#66409 CELL() 2nd argument range take top-left cell

... instead of the otherwise usual intersecting position.

Change-Id: I0edbf32b39e45e1c8fe8fcd7af2c84380aa4cd6c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/110951
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins